--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,12 @@
         tools:targetApi="31">
         <activity
             android:name=".Projetos"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.TelaProjeto"/>
         <activity
             android:name=".Contatos"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.TelaContato"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
